[project]
name = "memory-adaptor-demo"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi",
    "uvicorn",
    "pydantic",
    "streamlit",
    "langchain",
    "langchain-core",
    "langchain-community",
    "langchain-openai",
]
