[project]
name = "memory-adaptor-demo"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi",
    "uvicorn",
    "pydantic",
    "streamlit",
    "langchain",
    "langchain-core",
    "langchain-community",
    "langchain-openai",
    "pre-commit>=4.2.0",
    "pytest-cov>=6.1.1",
]

[dependency-groups]
dev = [
    "anyio>=4.9.0",
    "black>=25.1.0",
    "coverage>=7.8.2",
    "mypy>=1.16.0",
    "pre-commit>=4.2.0",
    "pytest>=8.4.0",
    "ruff>=0.11.12",
]
